[tool.poetry]
name = "monaco"
version = "0.1.0"
description = "Python framework for templating M.C. and parametric simulations"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
