[tool.poetry]
name = "monaco"
version = "0.1.0"
description = "Python framework for complex Parametric Simulations"
authors = ["Sergio Vinagrero Gutierrez <servinagrero@gmail.com>"]
keywords = ["simulations"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/servinagrero/monaco"
repository = "https://github.com/servinagrero/monaco"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli_command_name = 'monaco:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
